[REF] base_address_extended: improved fields and module names. Set the new fields for street name and numbers as computed instead of the contrary (easier to migrate). Commented unneeded code for now

--- a/addons/base_address_extended/views/base_address_extended.xml
+++ b/addons/base_address_extended/views/base_address_extended.xml
@@ -6,19 +6,19 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='city']" position="replace">
+            <!--<xpath expr="//field[@name='city']" position="replace">
                 <field name="city_id" placeholder="City" class="o_address_city"
                     context="{'default_country_id': country_id, 'default_state_id': state_id}"/>
-            </xpath>
+            </xpath>-->
             <xpath expr="//field[@name='street']" position="replace">
                 <field name="street" invisible="1"/>
-                <field name="street_raw" placeholder="Street..."/>
+                <field name="street_name" placeholder="Street Name..."/>
                 <div class="o_row">
                     <field name="city" invisible="1"/>
-                    <label for="street_number1" string="Number: " class="oe_edit_only"/>
+                    <label for="street_number" class="oe_edit_only"/>
                     <span> </span>
-                    <field name="street_number1"/>
-                    <label for="street_number2" string="Door: " class="oe_edit_only"/>
+                    <field name="street_number"/>
+                    <label for="street_number2" class="oe_edit_only"/>
                     <field name="street_number2"/>
                 </div>
             </xpath>
@@ -30,19 +30,19 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_address_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='city']" position="replace">
+            <!--<xpath expr="//field[@name='city']" position="replace">
                 <field name="city_id" placeholder="City" class="o_address_city"
                     context="{'default_country_id': country_id, 'default_state_id': state_id}"/>
                 <field name="city" invisible="1"/>
-            </xpath>
+            </xpath>-->
             <xpath expr="//field[@name='street']" position="replace">
                 <field name="street" invisible="1"/>
-                <field name="street_raw" placeholder="Street..."/>
+                <field name="street_name" placeholder="Street Name..."/>
                 <div class="o_row">
-                    <label for="street_number1" string="Number: " class="oe_edit_only"/>
+                    <label for="street_number" class="oe_edit_only"/>
                     <span> </span>
-                    <field name="street_number1"/>
-                    <label for="street_number2" string="Door: " class="oe_edit_only"/>
+                    <field name="street_number"/>
+                    <label for="street_number2" class="oe_edit_only"/>
                     <field name="street_number2"/>
                 </div>
             </xpath>
