--- a/addons/base_address_extended/views/base_address_extended.xml
+++ b/addons/base_address_extended/views/base_address_extended.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
 
+    <record id="view_res_country_extended_form" model="ir.ui.view">
+        <field name="name">view_res_country_extended_form</field>
+        <field name="model">res.country</field>
+        <field name="inherit_id" ref="base.view_country_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='address_format']" position="after">
+                <field name="street_format" groups="base.group_no_one" placeholder="Street format..."/>
+            </xpath>
+        </field>
+    </record>
+
     <record id="view_partner_structured_form" model="ir.ui.view">
         <field name="name">view_partner_structured_form</field>
         <field name="model">res.partner</field>
