--- a/addons/point_of_sale/report/pos_order_report_view.xml
+++ b/addons/point_of_sale/report/pos_order_report_view.xml
@@ -9,6 +9,7 @@
                     <field name="product_categ_id" type="row"/>
                     <field name="date" interval="month" type="col"/>
                     <field name="product_qty" type="measure"/>
+                    <field name="product_qty_wo_conversion" type="measure"/>
                     <field name="price_total" type="measure"/>
                 </pivot>
             </field>
